<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_ip_adress"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="start"
    android:orientation="vertical"
    android:visibility="visible">



    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible" />

    <TextView
        android:id="@+id/_name"
        android:layout_width="152dp"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:visibility="visible" />

    <EditText
        android:id="@+id/detailsName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/space"
        android:inputType="textPersonName"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:visibility="visible" />

    <TextView
        android:id="@+id/_ip_adress"
        android:layout_width="152dp"
        android:layout_height="wrap_content"
        android:text="@string/ip_adress"
        android:visibility="visible" />

    <EditText
        android:id="@+id/detailsIpAdr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/space"
        android:inputType="textWebEditText"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:visibility="visible" />

    <TextView
        android:id="@+id/_port"
        android:layout_width="152dp"
        android:layout_height="wrap_content"
        android:text="@string/port"
        android:visibility="visible" />

    <EditText
        android:id="@+id/detailsPort"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/space"
        android:inputType="number"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:textIsSelectable="false"
        android:visibility="visible" />


</LinearLayout>