<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible">


    <TableRow
        android:id="@+id/tableroww"
        android:layout_width="0dp"
        android:layout_height="18dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/object"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="14sp"
            android:textStyle="bold|italic"
            android:visibility="visible" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="class"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="14sp"
            android:textStyle="bold|italic"
            android:visibility="visible" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/razdel"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="14sp"
            android:textStyle="bold|italic"
            android:visibility="visible" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/zone"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="14sp"
            android:textStyle="bold|italic"
            android:visibility="visible" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="71dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/space"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="12sp"
            android:textStyle="bold|italic"
            android:visibility="visible" />


    </TableRow>

    <TableRow
        android:id="@+id/tableRow"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:gravity="left|right|start|end"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableroww">

        <EditText
            android:id="@+id/editObjekt"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:inputType="numberDecimal"
            android:text="4444"
            android:textAlignment="center"
            android:visibility="visible" />


        <EditText
            android:id="@+id/editClass"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:inputType="textUri"
            android:text="E602"
            android:textAlignment="center"
            android:visibility="visible" />

        <EditText
            android:id="@+id/editRazd"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:inputType="numberDecimal"
            android:text="00"
            android:textAlignment="center"
            android:visibility="visible" />

        <EditText
            android:id="@+id/editSchs"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:inputType="numberDecimal"
            android:text="000"
            android:textAlignment="center"
            android:visibility="visible" />

        <Button
            android:id="@+id/buttonSend_tx"
            android:layout_width="129dp"
            android:layout_height="match_parent"
            android:onClick="sendTx"
            android:text="Send" />

    </TableRow>



</android.support.constraint.ConstraintLayout>